# C-_homework

./: .gitignore  Makefile  README.md
es0_template/: CMakeLists.txt  Makefile
es0_template/src/: CMakeLists.txt  README.md  main.cpp
es0_template/src/TemplateLibrary/: CMakeLists.txt  TemplateObject.cpp  TemplateObject.h
es0_template/tests/: CMakeLists.txt  TemplateTestClass.cpp
es1/: CMakeLists.txt  Makefile  README.md
es1/src/: CMakeLists.txt  main.cpp
es1/src/CipCiop/: CMakeLists.txt  CipCiop.cpp  CipCiop.h
es1/tests/: CMakeLists.txt  TestCipCiop.cpp
es2/: CMakeLists.txt  Makefile  README.md  missingNumbers.hs
es2/src/: CMakeLists.txt
es2/src/MissingNumbers/: CMakeLists.txt  MissingNumbers.cpp  MissingNumbers.h
es2/tests/: CMakeLists.txt  TestMissingNumbers.cpp
es3/: README.md  mandelbrotIsObsolete.sh  script.sh
es4/: Makefile  README.md
es4/app/: main.c
es4/include/: marshalling.h
es4/src/: marshalling.c
es4/tests/: testMarshalling.c
utils/: configure.sh
